Fixed footer being out of place on about page

--- a/frontend/src/pages/style/About.css
+++ b/frontend/src/pages/style/About.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 .about-title {
-    background-color: rgba(0, 0, 0, 0.5); /* Optional: add a semi-transparent background to improve text readability */
+    background-color: rgba(0, 0, 0, 0.5); 
     display: inline-block;
     padding: 10px 20px;
     border-radius: 5px;
@@ -21,11 +21,11 @@
 .about-description {
     max-width: 800px;
     padding: 20px;
-    margin: 20px auto; /* Center the element horizontally */
+    margin: 20px auto; 
     text-align: left;
     font-family: 'Arial, sans-serif';
     line-height: 1.6;
-    background-color: #f8f8f8;
+    background-color: #526D82;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
